// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDropTarget FileDropTarget should render 1`] = `
<div>
  <div
    class="file-drop-target-root"
  >
    <div
      class="drop-target-container"
    >
      <button
        class="button-root btn btn-sm btn-primary"
        type="button"
      >
        Select File
      </button>
      <div
        class="drop-zone"
      >
        Or Drag and Drop Files Here
      </div>
    </div>
  </div>
</div>
`;

exports[`FileDropTarget FileDropTarget should render with file 1`] = `
<div
  className="file-drop-target-root"
>
  <div
    className="uploaded-file"
  >
    <Component
      file={
        Object {
          "completed": true,
          "response": "Test.csv",
        }
      }
      onCancel={[Function]}
    />
  </div>
</div>
`;

exports[`FileDropTarget FileDropTarget should show error if file status code is an error 1`] = `
<div
  className="file-drop-target-root"
>
  <div
    className="uploaded-file"
  >
    <Component
      file={
        Object {
          "completed": true,
          "status": 400,
        }
      }
      onCancel={[Function]}
    />
  </div>
</div>
`;

exports[`FileDropTarget FileItem renders 1`] = `
<div>
  <div
    class="file-item"
  >
    <div
      class="d-flex flex-row align-items-center justify-content-between"
    >
      <div>
        <div
          class="file-name d-flex"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Test.csv
          </span>
          <div
            class="status-wrapper"
          >
            <div
              class="spinner-root"
            >
              <span
                class="loading-animation loading-animation-dotted loading-animation-sm"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex align-items-center"
      >
        <button
          class="button-root btn btn-sm btn-unstyled"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</div>
`;
